--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="lib/react.development.js"></script>
   <script src="lib/react-dom.development.js"></script>
 
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <title>Document</title>
 </head>
 
