--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  
+
   <script src="lib/react.development.js"></script>
   <script src="lib/react-dom.development.js"></script>
+  <script src="lib/react-router-dom.min.js"></script>
+  <script src="lib/history.js"></script>
 
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Document</title>
