--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <script src="lib/react-dom.development.js"></script>
   <script src="lib/react-router-dom.min.js"></script>
   <script src="lib/history.js"></script>
-
+  <link rel="shortcut icon" type="image/png" href="assets/logo.png" />
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Document</title>
+  <title>Apsus </title>
 </head>
 
 <body>
